Fixed formation display on decreased width. Need to update display on mobile

--- a/src/main/resources/static/css/profile.css
+++ b/src/main/resources/static/css/profile.css
@@ -68,7 +68,7 @@
 
 .profile-buttons {
     transition: 0.5s;
-    padding: 20px;
+    padding: 20px 54px 30px 54px;
     display: flex;
     justify-content: space-between;
     width: 100%;
