--- a/src/main/resources/static/css/team-profile.css
+++ b/src/main/resources/static/css/team-profile.css
@@ -65,10 +65,6 @@
         width: unset;
     }
 
-    .team-profile-form {
-        min-height: 107vh;
-    }
-
     .grouped-buttons {
         order: 1;
         margin-bottom: 15px;
@@ -79,6 +75,25 @@
     }
     .back-button {
         max-width: 100px;
+    }
+
+    .profile-buttons {
+        padding: 20px !important;
+    }
+
+}
+
+@media (max-width: 920px) {
+   .formation-display.active {
+        display: block !important;
+    }
+
+    .create-formation-display {
+        margin-bottom: 10px;
+    }
+
+    .formation-RHS button {
+        margin-right: 10px;
     }
 }
 
@@ -115,6 +130,7 @@
     }
 
 }
+
 
 @media (max-width: 540px) {
     .tab .tab-button {
@@ -277,11 +293,12 @@
 
 .formation-list {
     width: 20%;
-    min-width: 20%;
+    min-width: 175px;
     padding: 3px 4px 3px 4px;
     box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.19);
     border-radius: 0 0 0 20px;
     overflow: auto;
+    min-height: 480px;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -321,7 +338,6 @@
 
 .content.formations {
     display: flex;
-    height: 480px;
 }
 
 .formation-display {
